--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
